[workspace]
resolver = "2"
members = ["grid_map", "openrr-nav", "openrr-nav-viewer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openrr/grid_map"

[workspace.dependencies]
grid_map = "0.1"
openrr-nav = "0.1"

anyhow = "1"
arci = "0.1"
bevy = "0.11"
bevy_egui = "0.21"
image = "0.24"
nalgebra = "0.32"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
rrt = "0.7"
thiserror = "1"
tokio = "1"
tonic = "0.10"
tonic-build = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }

[patch.crates-io]
grid_map = { path = "grid_map" }
openrr-nav = { path = "openrr-nav" }

[profile.release]
debug = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
