[package]
name = "grid_map"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
rand.workspace = true
rrt.workspace = true

[lints]
workspace = true
