[package]
name = "openrr-nav-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build.workspace = true

[dependencies]
bevy_egui.workspace = true
bevy.workspace = true
grid_map.workspace = true
nalgebra.workspace = true
openrr-nav.workspace = true
prost-types.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
clap.workspace = true

[dev-dependencies]
anyhow.workspace = true
rand.workspace = true
rrt.workspace = true
