[package]
name = "openrr-nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid_map = "0.1"
arci = "0.1"
thiserror = "1"
parking_lot = "0.12"
yaml-rust = "0.4"
rand = "0.8"
rrt = "0.7"

[dev-dependencies]
bevy = "0.11"
