[package]
name = "openrr-nav"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arci.workspace = true
grid_map.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
bevy.workspace = true
rand.workspace = true
rrt.workspace = true

[lints]
workspace = true
